--- a/video_streaming_app/pubspec.yaml
+++ b/video_streaming_app/pubspec.yaml
@@ -29,11 +29,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_slider: ^4.2.1
+  cloud_firestore: ^4.9.1
   cupertino_icons: ^1.0.2
+  file_picker: ^5.3.1
+  firebase_auth: ^4.9.0
   flutter:
     sdk: flutter
   # flutter_icons: ^1.1.0
   icons_plus: ^4.0.0
+  provider: ^6.0.5
   video_player: ^2.7.1
 
 dev_dependencies:
