--- a/video_streaming_app/pubspec.yaml
+++ b/video_streaming_app/pubspec.yaml
@@ -33,19 +33,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   file_picker: ^5.3.1
   firebase_auth: ^4.9.0
+  firebase_core: ^2.15.1
   flutter:
     sdk: flutter
-  # flutter_icons: ^1.1.0
   icons_plus: ^4.0.0
   provider: ^6.0.5
   video_player: ^2.7.1
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
